# trainer

./: README.md  requirements.txt  setup.cfg  setup.py
examples/: example.py
tests/: test_integration.py
trainer/: __init__.py  dummy.py  dummy_trainer.py
trainer/tests/: test.py  trainer.py
