[metadata]
name = trainer-py
description = Lightweight context-based library for benchmarking
long_description = file: README.md
long_description_content_type = text/markdown
keywords = metrics, benchmark
license = MIT
url = https://github.com/MichalMoravik/trainer
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
